[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.23.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
pwr-rs = { path = "../../pwrrs" }
num-bigint = "0.4"
hex = "0.4"
warp = "0.3"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"  # For testing with temporary directories
