[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
pwr-rs = "0.3.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"
hex = "0.4"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
